# SurgeryNavigation

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Calibration.cpp  Calibration.h  Capture_Video.vcxproj  Capture_Video.vcxproj.filters  OpenCVexample.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Data/: extrinsics.yml  intrinsics.yml  params.yml
Data/Template/: image_list.xml
Headers/: Calibration.h  Customozation.h
Source/: CMakeLists.txt  Capture_Video.cpp  Customozation.cpp  GUI.cpp  GUI.h  capture.cpp  capture_images.cpp  main.cpp  main2.cpp
code/: Calibration.cpp
