cmake_minimum_required(VERSION 3.0)
project (SurgeryNavigation)
set (OpenCV_DIR "C:/dev/OpenCV/install")
set (OPENCV_USED_MODULES calib3d highgui core video)
find_package(OpenCV NO_MODULE COMPONENTS ${OPENCV_USED_MODULES} REQUIRED ${OPENCV_PATH} NO_DEFAULT_PATH)
include_directories(${OpenCV_INCLUDE_DIRS})
link_libraries(${OpenCV_LIBS})
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
add_executable(Capture_Video Capture_Video.cpp, Customozation.cpp, Calibration.cpp)
target_link_libraries(Capture_Video ${OPENCV_LIBS} )